--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
 
     <title>Image gallery</title>
 
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1>Image gallery example XXX</h1>
 
     <div class="full-img">
-      <img class="displayed-img" src="images/pic1.jpg">
-      <img class="displayed-img" src="images/pic2.jpg">
-      <img class="displayed-img" src="images/pic3.jpg">
-      <img class="displayed-img" src="images/pic4.jpg">
-      <img class="displayed-img" src="images/pic5.jpg">
+      <img class="displayed-img" src="images/pic1.jpg" />
       <div class="overlay"></div>
       <button class="dark">Darken</button>
     </div>
 
     <div class="thumb-bar">
-
-
-
+      <img class="displayed-img" src="images/pic2.jpg" />
+      <img class="displayed-img" src="images/pic3.jpg" />
+      <img class="displayed-img" src="images/pic4.jpg" />
+      <img class="displayed-img" src="images/pic5.jpg" />
     </div>
 
     <div>
-      Credits (Photos Download Drom https://unsplash.com/images/stock/public-domain)
-
-      Photo by Meritt Thomas on Unsplash
-      Photo by Tandem X Visuals on Unsplash
-      Photo by Lucas Ludwig on Unsplash
-      Photo by Viktor Nikolaienko on Unsplash
-      Photo by Klara Kulikova on Unsplash
-
+      Credits (Photos Download Drom
+      https://unsplash.com/images/stock/public-domain) Photo by Meritt Thomas on
+      Unsplash Photo by Tandem X Visuals on Unsplash Photo by Lucas Ludwig on
+      Unsplash Photo by Viktor Nikolaienko on Unsplash Photo by Klara Kulikova
+      on Unsplash
     </div>
     <script src="main.js"></script>
   </body>
