--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -18,6 +18,7 @@
     </div>
 
     <div class="thumb-bar">
+      <img class="displayed-img" src="images/pic1.jpg" />
       <img class="displayed-img" src="images/pic2.jpg" />
       <img class="displayed-img" src="images/pic3.jpg" />
       <img class="displayed-img" src="images/pic4.jpg" />
