Images Are Centered
The images are now centered

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Image gallery</title>
+    <title>Image gallery for Assignment 2</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Image gallery example XXX</h1>
+    <h1>Image gallery Assignment 2 </h1>
+
 
     <div class="full-img">
       <img class="displayed-img" src="images/pic1.jpg" />
